# xacc

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .gitpod.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.cmake  LICENSE  LICENSE.EDL  NOTICE  README.md  id_rsa.pub  pyscf_observable.py  setup.py
docs/: CMakeLists.txt  Gemfile  LICENSE.md  LICENSE.txt  Makefile  README.md  _config.yml  about.md  accelerators.md  build.md  compilers.md  docker.md  index.html  requirements.txt  tutorials.md  xacc.md
docs/_includes/: footer.html  head.html  header.html  sidebar.html
docs/_posts/: 2017-02-10-xacc-scaffold-mods.markdown  2017-06-14-xacc-build-instructions.markdown  2017-06-14-xacc-build.markdown  2017-06-14-xacc-install-binary.markdown  2017-06-14-xacc-spec-compilers.markdown  2017-06-14-xacc-spec-ir.markdown  2017-06-14-xacc-spec-kernels.markdown  2017-06-16-xacc-rigetti-acc.markdown  2017-06-16-xacc-rigetti-tutorial.markdown  2017-06-20-xacc-rigetti-tutorial.markdown
docs/css/: style.scss
docs/doxygen/: CMakeLists.txt  Doxyfile.cmake  README.md
docs/noise-model/: JSON_NoiseModel_Spec.docx  Noise_Json.ipynb  README.md
docs/old/: about.md  index.html  science.md
docs/source/: advanced.rst  api.rst  apps.rst  arch.rst  basics.rst  bench.rst  conf.py  developers.rst  dwave.rst  extensions.rst  ibm.rst  index.rst  install.rst  overview.rst  plugins.rst  python.rst  rigetti.rst  tnqvm.rst  tutorials.rst  xacc-vqe.rst
docs/uml/: irv3.plantuml  observable.plantuml
impls/python/: CMakeLists.txt  xacc-py.cpp
impls/rigetti/: CMakeLists.txt  QuilCompiler.cpp  QuilCompiler.hpp  QuilVisitor.hpp  RigettiAccelerator.cpp  RigettiAccelerator.hpp
impls/scaffold/: CMakeLists.txt  ScaffoldASTConsumer.hpp  ScaffoldActivator.cpp  ScaffoldCompiler.cpp  ScaffoldCompiler.hpp  ScaffoldIRToSrcVisitor.hpp  manifest.json
python/: CMakeLists.txt  py_accelerator.cpp  py_accelerator.hpp  py_algorithm.cpp  py_algorithm.hpp  py_compiler.cpp  py_compiler.hpp  py_graph.cpp  py_graph.hpp  py_heterogeneous_map.cpp  py_heterogeneous_map.hpp  py_ir.cpp  py_ir.hpp  py_observable.cpp  py_observable.hpp  py_optimizer.cpp  py_optimizer.hpp  pyxacc.py  xacc-py.cpp  xacc.py
python/benchmark/: README.md  manage.py  manage.py.in
python/compiler/: CMakeLists.txt  PyXACCCompiler.cpp  PyXACCCompiler.hpp  PyXACCCompilerActivator.cpp  PyXACCIR.g4  PyXACCListener.cpp  PyXACCListener.hpp  PyXACCVisitor.hpp  generate.sh  manifest.json  pyxasm.g4  pyxasm_activator.cpp  pyxasm_compiler.cpp  pyxasm_compiler.hpp  pyxasm_errorlistener.hpp  pyxasm_listener.cpp  pyxasm_listener.hpp  pyxasm_visitor.hpp
python/examples/: EM_kernel_example.py  adapt_qaoa_example.py  adapt_vqe_h2.py  aer_pulse_sim.py  azure_bell.py  bell_aer_readout_error.py  cmx.py  contribute_ir_generator.py  custom_instruction_visitor.py  cx_qpt.py  ddcl_2qbit_example.py  ddcl_buffer_analysis.py  ddcl_decorator.py  ddcl_example.py  ddcl_example_data.ab  deuteronH2.py  dwave_simple.py  execute_qiskit_pyquil.py  ghz_to_bell.py  goat_pulse_optim.py  graph_construct.py  hadamard_qpt.py  ibm_get_native_code.py  ibmq_select_least_busy.py  iterative_phase_estimation.py  mc_vqe.py  mitiq_test.py  nah_vqe_ucc1.py  nah_vqe_ucc3.py  noise_model.py  opt.py  psi4_h2.py  pulse_ir_transform.py  pycma_example.py  pyscf_h2.py  pyzx_example.py  qaoa_example.py  qaoa_example_graph_input.py  qcmx.py  qeom.py  (+13 more)
python/plugin_generator/: plugin_generator.py
python/plugins/: CMakeLists.txt  manifest.json  py_plugin_loader.hpp  py_plugin_loader.in.cpp  py_plugin_loader_activator.cpp
python/tests/: PythonAPITester.py  azure_testing.py  decorator_testing.py  external_plugins_testing.py  test_ir_api.py  xacc_algorithm_testing.py
python/xacc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/xaccplugingen/: xaccplugingen.py
quantum/: CMakeLists.txt  QIR.hpp  QuantumIRProvider.cpp
quantum/annealing/: AnnealingActivator.cpp  CMakeLists.txt  manifest.json
quantum/aqc/: AQCQuantumActivator.cpp  CMakeLists.txt  manifest.json
quantum/examples/: CMakeLists.txt
quantum/gate/: CMakeLists.txt  GateQIR.hpp  GateQuantumActivator.cpp  xacc_observable.hpp  xacc_quantum_gate_api.cpp  xacc_quantum_gate_api.hpp
quantum/ir_provider/: QuantumIRProvider.cpp  QuantumIRProvider.hpp
quantum/observable/: CMakeLists.txt
quantum/plugins/: CMakeLists.txt
quantum/provider/: CMakeLists.txt  QuantumIRActivator.cpp  QuantumIRProvider.cpp  QuantumIRProvider.hpp  manifest.json
quantum/python/: CMakeLists.txt  xacc-quantum-py.cpp  xacc-quantum-py.hpp
quantum/qir/: CMakeLists.txt  QFunction.cpp  QFunction.hpp  QIR.hpp  QInstruction.cpp  QInstruction.hpp  QInstructionVisitor.hpp
quantum/utils/: CMakeLists.txt  Graph.hpp  GraphProvider.hpp
tools/qaoa/: CMakeLists.txt  README.md  qaoa_from_file.cpp  qaoa_from_file.hpp  qaoa_from_file_utils.cpp
tpls/: CMakeLists.txt
tpls/boost-dll/: CMakeLists.txt
tpls/staq/: LICENSE  VERSION
xacc/: CMakeLists.txt  README.md  XACC.cpp  XACC.hpp  xacc.cpp  xacc.hpp  xacc_version.in
xacc/accelerator/: Accelerator.hpp  AcceleratorBuffer.cpp  AcceleratorBuffer.hpp  AcceleratorBufferPostprocessor.hpp  AcceleratorDecorator.hpp  ExecutionQueue.hpp  NoiseModel.hpp
xacc/algorithm/: Algorithm.hpp  AlgorithmGradientStrategy.hpp  OperatorPool.hpp
xacc/compiler/: Compiler.hpp  Function.hpp  GraphIR.hpp  IR.hpp  IROptimization.hpp  IRTranslation.hpp  Instruction.hpp  Preprocessor.hpp  qalloc  qalloc.cpp  qalloc.hpp  xacc_internal_compiler.cpp  xacc_internal_compiler.hpp
xacc/ir/: AlgorithmGenerator.hpp  CompositeInstruction.hpp  Function.hpp  Graph.hpp  GraphProvider.hpp  IR.hpp  IRBuilder.cpp  IRBuilder.hpp  IRGenerator.hpp  IRPreprocessor.hpp  IRProvider.hpp  IRTransformation.hpp  IRVerifier.hpp  Instruction.hpp  InstructionIterator.hpp  InstructionParameter.hpp  InstructionService.hpp  InstructionVisitor.hpp  Observable.hpp  ObservableTransform.hpp  ParameterizedInstruction.hpp  Scheduler.hpp  VariableParameterizedInstruction.hpp
xacc/irv1/: IR.hpp  IRTransformation.hpp  InstructionVisitor.hpp  Observable.hpp
(+6138 files in other folders)
